# MyHids

./: README.md
HostSensor/: CMakeLists.txt
HostSensor/kernel_mode/: CMakeLists.txt  kernel_mode.c
HostSensor/user_mode/: CMakeLists.txt
